fix(ui5-side-navigation): fix shadow z-index

--- a/packages/fiori/src/themes/SideNavigation.css
+++ b/packages/fiori/src/themes/SideNavigation.css
@@ -89,6 +89,8 @@
 	background-color: var(--sapList_Background);
 	border-radius: var(--_ui5_side_navigation_item_border_radius);
 	transition: var(--_ui5_side_navigation_item_transition);
+
+	margin-block-end: var(--_ui5_side_navigation_item_bottom_margin);
 }
 .ui5-sn-item-hidden {
 	display: none;
@@ -203,10 +205,6 @@
 	border-radius: var(--_ui5_side_navigation_item_border_radius);
 }
 
-.ui5-sn-root:not(.ui5-sn-collapsed) .ui5-sn-item {
-	margin-block-end: var(--_ui5_side_navigation_item_bottom_margin);
-}
-
 .ui5-sn-in-popover .ui5-sn-item-group .ui5-sn-list-li:last-child .ui5-sn-item:not(:hover):not(:active)::before {
 	border: var(--_ui5_side_navigation_last_item_border_style);
 }
@@ -247,6 +245,7 @@
 .ui5-sn-collapsed .ui5-sn-list .ui5-sn-item:not(.ui5-sn-item-active):not(.ui5-sn-item-no-hover-effect):focus {
 	width: var(--_ui5_side_navigation_item_collapsed_hover_focus_width);
 	box-shadow: var(--_ui5_side_navigation_box_shadow);
+	z-index: 1;
 }
 
 .ui5-sn-collapsed .ui5-sn-list .ui5-sn-item.ui5-sn-item-selected:hover,
